syntax = "proto3";

package node.v1;

import "node/v1/schema.proto";
import "common/v1/pagination.proto";

service NodeService {
    rpc UpdateNode(UpdateNodeRequest) returns (UpdateNodeResponse) {}
    rpc DeleteNode(DeleteNodeRequest) returns (DeleteNodeResponse) {}
    rpc GetNodes (GetNodesRequest) returns (GetNodesResponse) {}
    rpc GetNode (GetNodeRequest) returns (GetNodeResponse) {}
}

message UpdateNodeRequest {
    string mac_address = 1;
    string name = 2;
    map<string, string> custom_labels = 4;
}
message UpdateNodeResponse {
    node.v1.Node node = 1;
}

message DeleteNodeRequest {
    optional string group_id = 1;
    string mac_address = 2;
}

message DeleteNodeResponse {}

message GetNodesRequest {
    common.v1.PaginationRequest pagination = 1;
    optional string group_id = 2;
}

message GetNodesResponse {
    repeated node.v1.Node nodes = 1;
}

message GetNodeRequest {
    optional string group_id = 1;
    string mac_address = 2;
}
message GetNodeResponse {
    node.v1.Node node = 1;
}
